P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerMsgHandle;
typedef void* P2PeerConWsaHandle;
typedef void* P2PeerHubHandle;
P2PC_API const wchar_t*     p2peerconwsa_get_address      (P2PeerConWsaHandle h);
// PostP2PeerMsg takes ownership of msgHandle; do not destroy it after this call.
P2PC_API P2PeerMsgHandle    p2peerconwsa_post_msg         (P2PeerConWsaHandle h,
                                                            P2PeerMsgHandle    msg);
// ── P2PeerHub ─────────────────────────────────────────────────────────────────
P2PC_API P2PeerHubHandle    p2peerhub_create         (const wchar_t* strAddr);
P2PC_API void               p2peerhub_destroy        (P2PeerHubHandle h);
P2PC_API int                p2peerhub_create_hub     (P2PeerHubHandle h,
                                                       const wchar_t* strAddr,
                                                       unsigned int   pumpsMax);
// Spawns the hub thread; returns a Win32 HANDLE (cast to void*).
P2PC_API void*              p2peerhub_spawn_hub      (P2PeerHubHandle h);
P2PC_API void               p2peerhub_close_hub      (P2PeerHubHandle h);