P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const wchar_t *p2peerconwsa_get_address(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_get_address$handle() {
        return p2peerconwsa_get_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const wchar_t *p2peerconwsa_get_address(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_get_address$address() {
        return p2peerconwsa_get_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const wchar_t *p2peerconwsa_get_address(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_get_address(MemorySegment h) {
        var mh$ = p2peerconwsa_get_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_get_address", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_post_msg {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_post_msg").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerconwsa_post_msg(P2PeerConWsaHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_post_msg$descriptor() {
        return p2peerconwsa_post_msg.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerconwsa_post_msg(P2PeerConWsaHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MethodHandle p2peerconwsa_post_msg$handle() {
        return p2peerconwsa_post_msg.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerconwsa_post_msg(P2PeerConWsaHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MemorySegment p2peerconwsa_post_msg$address() {
        return p2peerconwsa_post_msg.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peerconwsa_post_msg(P2PeerConWsaHandle h, P2PeerMsgHandle msg)
     * }
     */
    public static MemorySegment p2peerconwsa_post_msg(MemorySegment h, MemorySegment msg) {
        var mh$ = p2peerconwsa_post_msg.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_post_msg", h, msg);
            }
            return (MemorySegment)mh$.invokeExact(h, msg);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerHubHandle p2peerhub_create(const wchar_t *strAddr)
     * }
     */
    public static FunctionDescriptor p2peerhub_create$descriptor() {
        return p2peerhub_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerHubHandle p2peerhub_create(const wchar_t *strAddr)
     * }
     */
    public static MethodHandle p2peerhub_create$handle() {
        return p2peerhub_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerHubHandle p2peerhub_create(const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2peerhub_create$address() {
        return p2peerhub_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerHubHandle p2peerhub_create(const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2peerhub_create(MemorySegment strAddr) {
        var mh$ = p2peerhub_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_create", strAddr);
            }
            return (MemorySegment)mh$.invokeExact(strAddr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerhub_destroy(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_destroy$descriptor() {
        return p2peerhub_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerhub_destroy(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_destroy$handle() {
        return p2peerhub_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerhub_destroy(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_destroy$address() {
        return p2peerhub_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peerhub_destroy(P2PeerHubHandle h)
     * }
     */
    public static void p2peerhub_destroy(MemorySegment h) {
        var mh$ = p2peerhub_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_destroy", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_create_hub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_create_hub").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerhub_create_hub(P2PeerHubHandle h, const wchar_t *strAddr, unsigned int pumpsMax)
     * }
     */
    public static FunctionDescriptor p2peerhub_create_hub$descriptor() {
        return p2peerhub_create_hub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerhub_create_hub(P2PeerHubHandle h, const wchar_t *strAddr, unsigned int pumpsMax)
     * }
     */
    public static MethodHandle p2peerhub_create_hub$handle() {
        return p2peerhub_create_hub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerhub_create_hub(P2PeerHubHandle h, const wchar_t *strAddr, unsigned int pumpsMax)
     * }
     */
    public static MemorySegment p2peerhub_create_hub$address() {
        return p2peerhub_create_hub.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerhub_create_hub(P2PeerHubHandle h, const wchar_t *strAddr, unsigned int pumpsMax)
     * }
     */
    public static int p2peerhub_create_hub(MemorySegment h, MemorySegment strAddr, int pumpsMax) {
        var mh$ = p2peerhub_create_hub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_create_hub", h, strAddr, pumpsMax);
            }
            return (int)mh$.invokeExact(h, strAddr, pumpsMax);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_spawn_hub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_spawn_hub").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *p2peerhub_spawn_hub(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_spawn_hub$descriptor() {
        return p2peerhub_spawn_hub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *p2peerhub_spawn_hub(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_spawn_hub$handle() {
        return p2peerhub_spawn_hub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *p2peerhub_spawn_hub(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_spawn_hub$address() {
        return p2peerhub_spawn_hub.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *p2peerhub_spawn_hub(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_spawn_hub(MemorySegment h) {
        var mh$ = p2peerhub_spawn_hub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerhub_spawn_hub", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerhub_close_hub {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerhub_close_hub").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerhub_close_hub(P2PeerHubHandle h)
     * }
     */
    public static FunctionDescriptor p2peerhub_close_hub$descriptor() {
        return p2peerhub_close_hub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerhub_close_hub(P2PeerHubHandle h)
     * }
     */
    public static MethodHandle p2peerhub_close_hub$handle() {
        return p2peerhub_close_hub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerhub_close_hub(P2PeerHubHandle h)
     * }
     */
    public static MemorySegment p2peerhub_close_hub$address() {
        return p2peerhub_close_hub.ADDR;
    }
